k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-nodejs-service
spec:
  type: LoadBalancer
  selector:
    app: lab-nodejs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
